--- a/src/assets/font/index.css
+++ b/src/assets/font/index.css
@@ -1,4 +1,4 @@
-/* @font-face {
-    font-family: DIN;
-    src: url("./DIN-MEDIUMITALICALT.OTF");
-} */
+@font-face {
+	font-family: "Inter";
+    src: url("@/assets/font/fontLib/GaoDuanHeiXiuDing.ttf");
+}
