--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
 	font-weight: 400;
 
@@ -12,11 +12,11 @@
 	-webkit-text-size-adjust: 100%;
 }
 
-
 * {
 	padding: 0;
 	margin: 0;
 	font-family: "Inter";
+	box-sizing: border-box;
 }
 
 body {
